cfn-sg-template.json
{
    "AWSTemplateFormatVersion" : "2010-09-09",
    "Description": "A CFN template for learning",
    "Metadata": {
      "Author": { "Ref": "ParamAuthorName" }
    },
    "Parameters": {
      "ParamAuthorName": {
        "Type": "String",
        "Description": "Owner of the CFN Template."
      },
      "ParamAllowSSHFromRange": {
        "Type": "String",
        "Description": "IP CidrBlock to allow SSH access. i.e. 100.100.100.100/32",
        "Default": "0.0.0.0/0"
      },
      "ParamAllowSSHAccess": {
        "Type": "String",
        "Default": "true",
        "AllowedValues": ["true", "false"],
        "ConstraintDescription":"Whether to allow SSH access into the EC2 server"
      }
    },
    "Conditions": {
      "AllowSSHAccess": {
        "Fn::Equals": [{ "Ref": "ParamAllowSSHAccess" }, "true"]
      }
    },
    "Resources": {
      "SecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Security group for SSH and HTTP access",
          "SecurityGroupIngress": [
            {
              "IpProtocol":"tcp",
              "FromPort":"80",
              "ToPort":"80",
              "CidrIp": "0.0.0.0/0"
            },
            {
              "Fn::If": [
                "AllowSSHAccess",
                {
                  "IpProtocol":"tcp",
                  "FromPort":"22",
                  "ToPort":"22",
                  "CidrIp": { "Ref": "ParamAllowSSHFromRange" }
                },
                {
                  "Ref": "AWS::NoValue"
                }
              ]
            }
          ]
        }
      }
    },
    "Outputs": {
      "SecurityGroupName": {
        "Description": "Name of Instance Security Group",
        "Value": {
          "Ref": "SecurityGroup"
        }
      },
      "SecurityGroupId": {
        "Description": "ID of Instance Security Group",
        "Value": {
          "Fn::GetAtt": [
            "SecurityGroup",
            "GroupId"
          ]
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}-SecurityGroupId"
          }
        }
      }
    }
  }
